force-app/main/default/objects/Cuenta_planilla__c/Cuenta_planilla__c.object-meta.xml
<CustomObject>
    <label>Cuenta de planilla</label>
    <nameField>
        <displayFormat>CUP-{0000000000}</displayFormat>
        <label>Correlativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuentas de planilla</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>