force-app/main/default/objects/Cuenta_planilla__c/fields/Calcular_por__c.field-meta.xml
<CustomField>
    <fullName>Calcular_por__c</fullName>
    <label>Calcular por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Porcentaje</fullName>
            </value>
            <value>
                <fullName>Monto</fullName>
                <default>true</default>
                <label>Monto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>