force-app/main/default/objects/Cuenta_planilla__c/fields/Casilla__c.field-meta.xml
<CustomField>
    <fullName>Casilla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Casilla</label>
    <type>Checkbox</type>
</CustomField>