force-app/main/default/objects/Cuenta_planilla__c/fields/Codigo_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Codigo_cuenta__c</fullName>
    <label>Código de cuenta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>