force-app/main/default/objects/Cuenta_planilla__c/fields/Contenido_Planilla__c.field-meta.xml
<CustomField>
    <fullName>Contenido_Planilla__c</fullName>
    <label>Contenido Planilla</label>
    <referenceTo>Contenido_Planilla__c</referenceTo>
    <relationshipLabel>Cuentas de planilla</relationshipLabel>
    <relationshipName>Cuentas_planilla</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>