force-app/main/default/objects/Cuenta_planilla__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Cuentas__c</referenceTo>
    <relationshipLabel>Cuentas de planilla</relationshipLabel>
    <relationshipName>Cuentas_de_planilla</relationshipName>
    <type>Lookup</type>
</CustomField>