force-app/main/default/objects/Cuenta_planilla__c/fields/Idcustomer__c.field-meta.xml
<CustomField>
    <fullName>Idcustomer__c</fullName>
    <label>Idcustomer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>