force-app/main/default/objects/Cuenta_planilla__c/fields/Valor_Monto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Monto__c</fullName>
    <label>Valor / Monto</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>