force-app/main/default/objects/Cuenta_planilla__c/fields/Valor_Monto_Seguro_Vida__c.field-meta.xml
<CustomField>
    <fullName>Valor_Monto_Seguro_Vida__c</fullName>
    <label>Valor / Monto Seguro Vida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>