force-app/main/default/objects/Cuenta_planilla__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Valor_Monto__c</columns>
    <columns>Valor_Monto_Extraordinario__c</columns>
    <columns>Valor_Monto_Patronal_Extraordinario__c</columns>
    <columns>Valor_Monto_Patrono__c</columns>
    <columns>Valor_Monto_Seguro_Vida__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>